syncs with live server

--- a/wp-content/themes/bwitheme/assets/custom.css
+++ b/wp-content/themes/bwitheme/assets/custom.css
@@ -2779,7 +2779,7 @@ h1.page_title_alternate {
     position: absolute;
     right: 30px;
     bottom: 20px;
-    background-image: url('https://bwiairport.wpengine.com/wp-content/uploads/2023/06/download.png');
+    background-image: url('https://bwiairport.com/wp-content/uploads/2023/06/download.png');
     background-size: 14px 14px;
     background-repeat: no-repeat;
     border-radius: 50%;
